    - /setblock command will now not update the block itself
    - World.get_dimension() accepts now the dimension name, not only the id
    - player data of saves contains now an special region for dimension stuff
    - added data fixer part for player data
    - improved entity model rendering code
    - improved reload system

    fixed issues:
        from previous snapshot:
            - alpha rendering for blocks was broken
            - RenderingHelper's alpha on/off functions were not working

        from development versions for a1.1.0:
            - EntityModelGenerator was not parsing states correctly (20w24a)

        long-term issues:
            - block model rendering was in some cases not rendering correctly
                -> some fence & wall faces were rendering without texture
            - Chunk deserializer was not setting chunks properties properly leading into not rendering entities


changelog of snapshot 20w28a released on 08.07.2020 (theme: fixing stuff & upgrading base to 1.16)
    updated resources to 1.16 and added (some) content of the update

    Rendering:
        - improved rendering system by using MatrixStack's and RenderingHelper-instances
        - changed how item textures are baked together
        - added button to delete world in world selection screen

    World Format:
        - improved data fixer system

    Gameplay:
        - SHIFT-drag support in inventories

    Commands:
        - improved command handling
        - added /execute in <dimension id> sub-command
        - /teleport allows now the player to also change dimension

    Data Gen:
        - deprecated old AdvancedBlockFactory system
        - added CombinedBlockFactory system for doing fancy stuff with data gen & in-game objects at ones
        - added --enable-all-blocks runtime flag for enabling all optional blocks

    Profiler:
        - added profiler for world generation

    Registries: